--- a/ProspectiveUndergrads.Rmd
+++ b/ProspectiveUndergrads.Rmd
@@ -8,9 +8,9 @@ title: "Joining the lab as an undergraduate"
 description: 
   ""
 ---
-As a new lab on campus, we are looking for 1-2 undergraduate research assistants (RAs) to help us set up a sophisticated and involved psychophysiology laboratory. **As of October 2021, we are only accepting applications for students interested in doing research on a volunteer basis. This will likely change after Fall term.**
+As of May 2022, we are not accepting undergraduate RA applications. Please check back periodically, as our needs may change.
 
-Your responsibilities may include:
+<!-- Your responsibilities may include:
 
 * Organizational tasks
 * Assisting in literature review
@@ -25,7 +25,7 @@ Why should you consider joining our lab?
 
 **If you have any questions, please don’t hesitate to contact Angelica DeFalco at angelica.defalco@oregonstate.edu or Daniel Bradford at daniel.bradford@oregonstate.edu**
 
-If you are interested in applying, fill out [this](https://forms.gle/XK2cDVEQQUsqxxgPA) google form. Please give us at least a week to review your application before scheduling an interview.
+If you are interested in applying, fill out [this](https://forms.gle/XK2cDVEQQUsqxxgPA) google form. Please give us at least a week to review your application before scheduling an interview. -->
 
 
 
