--- a/Values.Rmd
+++ b/Values.Rmd
@@ -12,7 +12,7 @@ As the director of this lab, I am committed to supporting each member first and 
 
 The science we do in the lab is complex. I believe it is crucial to present this material in the clearest possible way. Despite some of the words used in the research descriptions on this website, I am careful to avoid scientific jargon and make attempts to use plain language in the lab. While helping lab members to strive for a fuller understanding of the data they consume, I encourage them to look for bias in the ways data may be presented in media reports that can obscure important shortcomings or caveats to our and others’ research.  
 
-I am very proud to have been fortunate enough to have my mentoring recognized several times. I recieved the 2017 Excellence in Undergraduate Mentoring Award from the Office of the Provost at University of Wisconsin, Madison. My contributions to mentoring students from diverse backgrounds was also recognized by the Multicultural Graduate Network with an honorable mention for their Peer Mentor Award. In 2021, I was awarded both the Univeristy of Miami Graduate Faculty Mentor of the Year award and the Psychology Graduate Student Organization Teachor of the Year award. I am new Oregon State University as of Jan 2022 so I am happy to provide references to my mentoring by mentees from my previous universities.  
+I am very proud to have been fortunate enough to have my mentoring recognized several times. I received the 2017 Excellence in Undergraduate Mentoring Award from the Office of the Provost at University of Wisconsin, Madison. My contributions to mentoring students from diverse backgrounds was also recognized by the Multicultural Graduate Network with an honorable mention for their Peer Mentor Award. In 2021, I was awarded both the University of Miami Graduate Faculty Mentor of the Year award and the Psychology Graduate Student Organization Teacher of the Year award. I am new to Oregon State University as of January 2022 so I am happy to provide references to my mentoring by mentees from my previous universities.  
 
 **Reproducibility, Rigor, Transparency, and Openness:**  
 
