--- a/People.Rmd
+++ b/People.Rmd
@@ -89,6 +89,22 @@ knitr::include_graphics("images/MiaT.png")
 :::
 
 <center> 
+## Graduate Students
+</center>
+:::float-image
+
+```{r out.width='150px', out.extra='style="float:above; padding:1px"', echo=FALSE}
+knitr::include_graphics("images/FreyaW.png")
+```
+
+[Freya Whittaker](FreyaW.html) 
+<br/>
+**Graduate Student, Health Psychology**
+<br/>
+[CV](files/CVs/Whittaker_CV.pdf) [Twitter](https://twitter.com/fmwhittaker)
+:::
+
+<center> 
 ## Collaborators
 </center>
 
