--- a/PopMedia.Rmd
+++ b/PopMedia.Rmd
@@ -16,6 +16,8 @@ Stoops W.W., Pang R.D., Bradford D.E. (2021, September 23). Publishing in a scho
 
 ## -Research and interviews in the news- ###
 
+Ellwood, B. (2022, August 24). Alcohol dampens reactivity to psychological stress, especially for uncertain stressors. Retrieved from https://www.psypost.org/2022/08/alcohol-dampens-reactivity-to-psychological-stress-especially-for-uncertain-stressors-63780
+
 Pappas, S. (2022, June 1). With traffic deaths on the rise, psychologists are being called on to make driving safer. [APA Monitor](https://www.apa.org/monitor/2022/06/feature-traffic-safety)
 
 Rosbach, M. (2022, January 22). OSU Research: How alcohol dampens response to uncertain stressors [Web log post](https://www.thechronicleonline.com/news/osu-research-how-alcohol-dampens-response-to-uncertainstressors/article_89f0db16-7a3a-11ec-92c9-0747d3b67c1f.html)
