--- a/ProspectiveUndergrads.Rmd
+++ b/ProspectiveUndergrads.Rmd
@@ -8,26 +8,24 @@ title: "Joining the lab as an undergraduate"
 description: 
   ""
 ---
-As of May 2022, we are not accepting undergraduate RA applications. Please check back periodically, as our needs may change.
+As of September 2022, we are recruiting for research assistants for volunteer, credit, and federal work study pay!
 
-<!-- Your responsibilities may include:
+Your responsibilities may include:
 
 * Organizational tasks
-* Assisting in literature review
+* Assisting in literature review for a future publication
 * Manual set up of laboratory equipment
-* Assisting/providing feedback for lab protocol development
+* Using sophisticated psychophysiological equipment
+* Interacting with and running participants during experimental protocols
 
 Why should you consider joining our lab?
 
-* You will gain a unique and invaluable opportunity to set up a brand-new psychophysiological laboratory, eligible to be placed on your resume or CV
+* You will gain a unique and invaluable opportunity to assist in running participants in a brand-new psychophysiological laboratory, eligible to be placed on your resume or CV
 * Begin networking with leading researchers in the addiction and anxiety psychophysiological research field.
-* As one of the first people setting up the lab, you will likely have opportunity to provide feedback to and input in various facets of cohesive lab functioning.
+* As one of the first people running participants in the lab, you will likely have opportunity to provide feedback to and input in various facets of cohesive lab functioning.
+* Learning how to use RStudio, MATLAB, and other scripting programs that can help strengthen your application to future jobs or graduate school.
 
 **If you have any questions, please don’t hesitate to contact Angelica DeFalco at angelica.defalco@oregonstate.edu or Daniel Bradford at daniel.bradford@oregonstate.edu**
 
-If you are interested in applying, fill out [this](https://forms.gle/XK2cDVEQQUsqxxgPA) google form. Please give us at least a week to review your application before scheduling an interview. -->
-
-
-
-
+If you are interested in applying, fill out [this](https://forms.gle/XK2cDVEQQUsqxxgPA) google form. Please give us at least a week to review your application before scheduling an interview.
 
