--- a/Publications.Rmd
+++ b/Publications.Rmd
@@ -15,9 +15,9 @@ Victor, S., Schleider, J., Ammerman, B., Bradford, D.E., Devendorf, A., Gruber, 
 
 Bradford, D.E., Shireman, J.M., Sant'Ana, S.J., Fronk, G.E., Curtin, J.J. (in press). Alcohol's effects during uncertain and uncontrollable stressors in the laboratory. *Clinical Psychological Science*. [**PDF**](files/Publications/BradfordD2021a.pdf) [**OSF**](https://osf.io/2zmxe/)
 
-Goodman, F.R., Brown, B.A., Silva, G.M., Bradford, D.E., Tennen, H.A., Kashdan, T.B. (in press). Motivational underpinnings of alcohol use in people with social anxiety disorder: A daily diary study. Behavior Therapy.
+Goodman, F.R., Brown, B.A., Silva, G.M., Bradford, D.E., Tennen, H.A., Kashdan, T.B. (in press). Motivational underpinnings of alcohol use in people with social anxiety disorder: A daily diary study. *Behavior Therapy*.
 
-Morriss, J., Bradford, D.E., Wake, S., Biagi, N.,Tanovic, E., Kaye, J.T., Joormann, D. (2022). Intolerance of uncertainty and physiological responses during instructed threat of shock: multi-lab investigation. Biological Psychology, 167. doi:10.1016/j.biopsycho.2021.108223
+Morriss, J., Bradford, D.E., Wake, S., Biagi, N.,Tanovic, E., Kaye, J.T., Joormann, D. (2022). Intolerance of uncertainty and physiological responses during instructed threat of shock: multi-lab investigation. *Biological Psychology*, 167. doi:10.1016/j.biopsycho.2021.108223
 
 
 ## -2021- ##
