--- a/index.Rmd
+++ b/index.Rmd
@@ -16,7 +16,7 @@ We are a new psychophysiological research lab in the [School of Psychological Sc
 :::
 
 <div class="note">
-<strong> NOTE:</strong> The deadline for the 2022 graduate student application cycle for the Health Psychology PhD program has passed. Please check back later this year for updates about the 2023 cycle. If you would like to learn more about the Health Psychology PhD program at OSU, click [here](https://liberalarts.oregonstate.edu/sps/psychology/graduate-psychology/about-our-program/health-psychology-area)</div> 
+<strong> NOTE:</strong> Dr. Bradford will be reviewing applications for the 2023 graduate student application cycle for the Health Psychology PhD program. If you would like to learn more about the Health Psychology PhD program at OSU, click [here](https://liberalarts.oregonstate.edu/sps/psychology/graduate-psychology/about-our-program/health-psychology-area). Feel free to contact Dr. Bradford at daniel.bradford@oregonstate.edu with any questions. </div> 
 
 <!--![](images/Dr_BennitoNoBG.png)-->
 
