--- a/ProspectiveUndergrads.Rmd
+++ b/ProspectiveUndergrads.Rmd
@@ -8,7 +8,7 @@ title: "Joining the lab as an undergraduate"
 description: 
   ""
 ---
-As of September 2022, we are recruiting for research assistants for volunteer, credit, and federal work study pay!
+As of September 2022, we are recruiting research assistants for volunteer, credit, and federal work study pay!
 
 Your responsibilities may include:
 
