--- a/ProspectiveUndergrads.Rmd
+++ b/ProspectiveUndergrads.Rmd
@@ -8,7 +8,9 @@ title: "Joining the lab as an undergraduate"
 description: 
   ""
 ---
-As of September 2022, we are recruiting research assistants for volunteer, credit, and federal work study pay!
+As of November 2022, we are reviewing applications we have received and are no longer accepting new applications. Please return to this page at a later date, as our needs may change.
+
+<!-- recruiting research assistants for volunteer, credit, and federal work study pay! 
 
 Your responsibilities may include:
 
@@ -25,7 +27,7 @@ Why should you consider joining our lab?
 * As one of the first people running participants in the lab, you will likely have opportunity to provide feedback to and input in various facets of cohesive lab functioning.
 * Learning how to use RStudio, MATLAB, and other scripting programs that can help strengthen your application to future jobs or graduate school.
 
-**If you have any questions, please don’t hesitate to contact Angelica DeFalco at angelica.defalco@oregonstate.edu or Daniel Bradford at daniel.bradford@oregonstate.edu**
+If you have any questions, please don’t hesitate to contact Angelica DeFalco at angelica.defalco@oregonstate.edu or Daniel Bradford at daniel.bradford@oregonstate.edu**
 
-If you are interested in applying, fill out [this](https://forms.gle/XK2cDVEQQUsqxxgPA) google form. Please give us at least a week to review your application before scheduling an interview.
+If you are interested in applying, fill out [this](https://forms.gle/XK2cDVEQQUsqxxgPA) google #form. Please give us at least a week to review your application before scheduling an interview. -->
 
