Updated CV and fixed typo

--- a/Pets.Rmd
+++ b/Pets.Rmd
@@ -12,7 +12,7 @@ knitr::include_graphics("images/LucyB.png")
 
 [Lucy Bradford](LucyB.html) 
 <br/>
-**Great Pyrenees Moutain Dog**
+**Great Pyrenees Mountain Dog**
 :::
 
 <br/>
