--- a/People.Rmd
+++ b/People.Rmd
@@ -100,12 +100,24 @@ knitr::include_graphics("images/NicoD.png")
 
 :::float-image
 
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Selfie of a person with medium length curly hair, fair skin, and a black rain jacket against a background full of trees.", echo=FALSE}
+knitr::include_graphics("images/CorrynD.png")
+```
+
+[Corryn Dooley](CorrynD.html)
+<br/>
+**URSA Engage Research Assistant**
+:::
+
+
+:::float-image
+
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt="Picture of a smiling person with long dark straight hair and two streaks of pink hair, fair skin, and a black shirt against a leafy background.", echo=FALSE}
 knitr::include_graphics("images/MiaT.png")
 ```
 [Mia Tognoli](MiaT.html)
 <br/>
-**URSA Engage Research Assistant**
+**Honors Thesis Research Assistant**
 :::
 
 <center> 
