undergrad RA updates

--- a/NicoD.Rmd
+++ b/NicoD.Rmd
@@ -7,7 +7,7 @@ output:
  
 ## Bio
 
-I am currently a sophomore at Oregon State University studying Psychology. I am a Bay
+I am currently a junior at Oregon State University studying Psychology. I am a Bay
 Area native, graduating from De La Salle high school (Concord, CA) in 2020. My main interest
 is Neuroscience, specifically how psychotropic substances affect connections within the brain. I
 have always been curious about how people interact on both conscious and unconscious levels.
