--- a/People.Rmd
+++ b/People.Rmd
@@ -67,7 +67,7 @@ knitr::include_graphics("images/LindsayB.png")
 ```
 [Lindsay Beaman](LindsayB.html)
 <br/>
-**Research Assistant**
+**Assistant Researcher**
 :::
 
 <br/>
@@ -80,7 +80,7 @@ knitr::include_graphics("images/JacksonC.png")
 
 [Jackson Cutler](JacksonC.html)
 <br/>
-**Research Assistant**
+**Assistant Researcher**
 :::
 
 <br/>
@@ -93,7 +93,7 @@ knitr::include_graphics("images/NicoD.png")
 
 [Nico Doran](NicoD.html)
 <br/>
-**Research Assistant**
+**Assistant Researcher**
 :::
 
 <br/>
@@ -106,9 +106,34 @@ knitr::include_graphics("images/CorrynD.png")
 
 [Corryn Dooley](CorrynD.html)
 <br/>
-**URSA Engage Research Assistant**
+**URSA Engage Assistant Researcher**
 :::
 
+<br/>
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Selfie of a person with medium length curly hair, fair skin, and a black rain jacket against a background full of trees.", echo=FALSE}
+knitr::include_graphics("images/EmmaG.png")
+```
+
+[Emma Gilmore](EmmaG.html)
+<br/>
+**Assistant Researcher**
+:::
+
+<br/>
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Selfie of a person with medium length curly hair, fair skin, and a black rain jacket against a background full of trees.", echo=FALSE}
+knitr::include_graphics("images/LucasT.png")
+```
+
+[Lucas Tepe](LucasT.html)
+<br/>
+**Assistant Researcher**
+:::
 
 :::float-image
 
@@ -117,7 +142,7 @@ knitr::include_graphics("images/MiaT.png")
 ```
 [Mia Tognoli](MiaT.html)
 <br/>
-**Honors Thesis Research Assistant**
+**Assistant Researcher**
 :::
 
 <center> 
