--- a/People.Rmd
+++ b/People.Rmd
@@ -45,7 +45,7 @@ knitr::include_graphics("images/AngelicaD.jpg")
 </center>
 :::float-image
 
-```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with shoulder length blonde straight hair, fair skin and a black white collared shirt with a black background.", echo=FALSE}
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with shoulder length blonde straight hair, fair skin and a black sleeveless shirt with a background of greenery.", echo=FALSE}
 knitr::include_graphics("images/FreyaW.png")
 ```
 
@@ -118,6 +118,33 @@ knitr::include_graphics("images/EmmaG.png")
 ```
 
 [Emma Gilmore](EmmaG.html)
+<br/>
+**Assistant Researcher**
+:::
+
+<br/>
+
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Photo of a person with blond curly hair wearing a brown cowboy hat against a backdrop of greenery.", echo=FALSE}
+knitr::include_graphics("images/CatalinaS.jpg")
+```
+
+[Catalina Slangan](CatalinaS.html)
+<br/>
+**Assistant Researcher**
+:::
+
+<br/>
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Image of a person with straight brown hair and fair skin with freckles wearing a striped shirt leaning against a tree trunk.", echo=FALSE}
+knitr::include_graphics("images/DakotaS.jpg")
+```
+
+[Dakota Smith](DakotaS.html)
 <br/>
 **Assistant Researcher**
 :::
