Updated Daniel's CV, changed Freya's photo

--- a/FreyaW.Rmd
+++ b/FreyaW.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Freya Whittaker"
-image: "images/FreyaW.png"
+image: "images/FreyaW2.png"
 links:
   - label: CV
     url: "files/CVs/Whittaker_CV.pdf"
