--- a/People.Rmd
+++ b/People.Rmd
@@ -20,7 +20,7 @@ knitr::include_graphics("images/Daniel.JPG")
 <br/>
 **Assistant Professor and Lab Director**
 <br/>
-[CV](files/CVs/Bradford_CV.pdf) [Google Scholar](https://scholar.google.com/citations?user=mFzYd1sAAAAJ&hl=en) [Twitter](https://twitter.com/drdanbradford)
+[CV](files/CVs/Bradford_CV_01.2023.pdf) [Google Scholar](https://scholar.google.com/citations?user=mFzYd1sAAAAJ&hl=en) [Twitter](https://twitter.com/drdanbradford)
 :::
 
 <br/>
@@ -46,7 +46,7 @@ knitr::include_graphics("images/AngelicaD.jpg")
 :::float-image
 
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with shoulder length blonde straight hair, fair skin and a black sleeveless shirt with a background of greenery.", echo=FALSE}
-knitr::include_graphics("images/FreyaW.png")
+knitr::include_graphics("images/FreyaW2.png")
 ```
 
 [Freya Whittaker](FreyaW.html) 
