fixing typo on publications page

--- a/Publications.Rmd
+++ b/Publications.Rmd
@@ -8,7 +8,7 @@ description:
 ---
 ## -2022- ##
 
-Bradford, D.E., DeFalco, A., Perkins, E.R., Carvajal, I., Kwasa, J., Goodman, F.R., Jackson, F., Richardson, L.N.S., Woodley, N., Neuberger, L., Sandoval, J.A., Huang, H.J., Joyner, K.J. (2022). Whose signals being amplified amplifying? Towards a more equitable clinical psychophysiology. *Clinical Psychological Science*. [**PDF**](files/Publications/BradfordD2022/BradfordD2022.pdf)
+Bradford, D.E., DeFalco, A., Perkins, E.R., Carvajal, I., Kwasa, J., Goodman, F.R., Jackson, F., Richardson, L.N.S., Woodley, N., Neuberger, L., Sandoval, J.A., Huang, H.J., Joyner, K.J. (2022). Whose signals are being amplified? Towards a more equitable clinical psychophysiology. *Clinical Psychological Science*. [**PDF**](files/Publications/BradfordD2022/BradfordD2022.pdf)
 [**OSF**](https://osf.io/hj3mq/#!)
 
 
