--- a/NicoD.Rmd
+++ b/NicoD.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Nico Doran"
+title: "Nico Doran *(he/him/his)*"
 image: "images/NicoD.png"
 output:
   postcards::solana
@@ -7,13 +7,9 @@ output:
  
 ## Bio
 
-I am currently a junior at Oregon State University studying Psychology. I am a Bay
-Area native, graduating from De La Salle high school (Concord, CA) in 2020. My main interest
-is Neuroscience, specifically how psychotropic substances affect connections within the brain. I
-have always been curious about how people interact on both conscious and unconscious levels.
-My main goal is to educate others on how they work(thoughts, emotions, behaviors), and how
-external stimuli affect our internal state on a chemical level. I plan on pursuing a Ph.D. in
-Neuroscience after gaining experience in the research field.
+I am currently a junior at Oregon State University majoring in Psychology with minors in biochemistry and molecular biology. I am a Bay Area native, graduating from De La Salle high school (Concord, CA) in 2020. My main interest is Neuroscience, specifically how psychotropic substances affect connections within the brain. I have always been curious about how people interact on both conscious and unconscious levels.
+
+My main goal is to educate others on how they work(thoughts, emotions, behaviors), and how external stimuli affect our internal state on a chemical level. I plan on pursuing a Ph.D. in Neuroscience after gaining experience in the research field.
 
 ## Education
 
