--- a/People.Rmd
+++ b/People.Rmd
@@ -35,7 +35,7 @@ knitr::include_graphics("images/AngelicaD.jpg")
 <br/>
 **Lab Manager**
 <br/>
-[CV](files/CVs/DeFalco_CV.pdf) [Twitter](https://twitter.com/A_DeFalco11)
+[CV](files/CVs/DeFalco_CV.pdf) [Google Scholar](https://scholar.google.com/citations?user=lXu-bq4AAAAJ&hl=en&oi=ao) [Twitter](https://twitter.com/A_DeFalco11)
 :::
 
 <br/>
@@ -58,8 +58,21 @@ knitr::include_graphics("images/FreyaW2.png")
 <br/>
 
 <center> 
-## Undergraduate Assistant Researchers
+## Assistant Researchers
 </center>
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with short black hair, and a Strawberry Shortcake white shirt on.",echo=FALSE}
+knitr::include_graphics("images/KarenAP.png")
+```
+[Karen Agustin-Paz](KarenAP.html)
+<br/>
+**STEM Leaders Assistant Researcher**
+:::
+
+<br/>
+
 :::float-image
 
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with long strawberry blonde straight hair, fair skin, a black shirt and blue jeans against a pink background.",echo=FALSE}
@@ -67,7 +80,7 @@ knitr::include_graphics("images/LindsayB.png")
 ```
 [Lindsay Beaman](LindsayB.html)
 <br/>
-**Assistant Researcher**
+**Undergraduate Assistant Researcher**
 :::
 
 <br/>
@@ -80,7 +93,7 @@ knitr::include_graphics("images/JacksonC.png")
 
 [Jackson Cutler](JacksonC.html)
 <br/>
-**Assistant Researcher**
+**Volunteer Assistant Researcher**
 :::
 
 <br/>
@@ -93,7 +106,7 @@ knitr::include_graphics("images/NicoD.png")
 
 [Nico Doran](NicoD.html)
 <br/>
-**Assistant Researcher**
+**Undergraduate Assistant Researcher**
 :::
 
 <br/>
@@ -119,21 +132,32 @@ knitr::include_graphics("images/EmmaG.png")
 
 [Emma Gilmore](EmmaG.html)
 <br/>
-**Assistant Researcher**
+**Honors Thesis Assistant Researcher**
 :::
 
 <br/>
 
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with long strawberry blonde straight hair, fair skin, a black shirt and blue jeans against a pink background.",echo=FALSE}
+knitr::include_graphics("images/EJR.png")
+```
+[EJ Rifkin](EJR.html)
+<br/>
+**Volunteer Assistant Researcher**
+:::
+
+<br/>
 
 :::float-image
 
 ```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Photo of a person with blond curly hair wearing a brown cowboy hat against a backdrop of greenery.", echo=FALSE}
-knitr::include_graphics("images/CatalinaS.jpg")
+knitr::include_graphics("images/CatalinaS.png")
 ```
 
 [Catalina Slangan](CatalinaS.html)
 <br/>
-**Assistant Researcher**
+**Undergraduate Assistant Researcher**
 :::
 
 <br/>
@@ -146,7 +170,7 @@ knitr::include_graphics("images/DakotaS.jpg")
 
 [Dakota Smith](DakotaS.html)
 <br/>
-**Assistant Researcher**
+**Undergraduate Assistant Researcher**
 :::
 
 <br/>
@@ -159,7 +183,7 @@ knitr::include_graphics("images/LucasT.png")
 
 [Lucas Tepe](LucasT.html)
 <br/>
-**Assistant Researcher**
+**Undergraduate Assistant Researcher**
 :::
 
 :::float-image
@@ -169,7 +193,7 @@ knitr::include_graphics("images/MiaT.png")
 ```
 [Mia Tognoli](MiaT.html)
 <br/>
-**Assistant Researcher**
+**Honors Thesis Assistant Researcher**
 :::
 
 <center> 
