--- a/FreyaW.Rmd
+++ b/FreyaW.Rmd
@@ -4,6 +4,8 @@ image: "images/FreyaW2.png"
 links:
   - label: CV
     url: "files/CVs/Whittaker_CV.pdf"
+  - label: Google Scholar
+    url: "https://scholar.google.com/citations?hl=en&user=6EXE-RUAAAAJ"
   - label: Twitter
     url: "https://twitter.com/fmwhittaker"
 output:
