--- a/People.Rmd
+++ b/People.Rmd
@@ -23,20 +23,6 @@ knitr::include_graphics("images/Daniel.JPG")
 [CV](files/CVs/Bradford_CV.pdf) [Google Scholar](https://scholar.google.com/citations?user=mFzYd1sAAAAJ&hl=en) [Twitter](https://twitter.com/drdanbradford)
 :::
 
-<br/>
-
-:::float-image
-
-```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with long brown curled hair, fair skin, and a white sash around their neck and a green dress with a blue sky, lake and buildings in the background.", echo=FALSE}
-knitr::include_graphics("images/AngelicaD.jpg")
-```
-
-[Angelica DeFalco, B.S.](AngelicaD.html) 
-<br/>
-**Lab Manager**
-<br/>
-[CV](files/CVs/DeFalco_CV.pdf) [Google Scholar](https://scholar.google.com/citations?user=lXu-bq4AAAAJ&hl=en&oi=ao) [Twitter](https://twitter.com/A_DeFalco11)
-:::
 
 <br/>
 
@@ -61,17 +47,6 @@ knitr::include_graphics("images/FreyaW2.png")
 ## Assistant Researchers
 </center>
 
-:::float-image
-
-```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with short black hair, and a Strawberry Shortcake white shirt on.",echo=FALSE}
-knitr::include_graphics("images/KarenAP.png")
-```
-[Karen Agustin-Paz](KarenAP.html)
-<br/>
-**STEM Leaders Assistant Researcher**
-:::
-
-<br/>
 
 :::float-image
 
@@ -83,18 +58,6 @@ knitr::include_graphics("images/LindsayB.png")
 **Undergraduate Assistant Researcher**
 :::
 
-<br/>
-
-:::float-image
-
-```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with a black hat on, fair skin, and a grey rain jacket against a mountaneous background.", echo=FALSE}
-knitr::include_graphics("images/JacksonC.png")
-```
-
-[Jackson Cutler](JacksonC.html)
-<br/>
-**Volunteer Assistant Researcher**
-:::
 
 <br/>
 
@@ -119,7 +82,7 @@ knitr::include_graphics("images/CorrynD.png")
 
 [Corryn Dooley](CorrynD.html)
 <br/>
-**URSA Engage Assistant Researcher**
+**Undergraduate Assistant Researcher**
 :::
 
 <br/>
@@ -136,6 +99,7 @@ knitr::include_graphics("images/EmmaG.png")
 :::
 
 <br/>
+
 
 :::float-image
 
@@ -253,4 +217,55 @@ knitr::include_graphics("images/CourtneyB.png")
 [Courtney Beard, Ph.D](CourtneyB.html) 
 <br/>
 **Director of CARE lab, McLean Hospital/Harvard Medical School**
+
+:::
+
+<br/>
+
+<center> 
+## Lab Alumni
+</center>
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with long brown curled hair, fair skin, and a white sash around their neck and a green dress with a blue sky, lake and buildings in the background.", echo=FALSE}
+knitr::include_graphics("images/AngelicaD.jpg")
+```
+
+[Angelica DeFalco, B.S.](AngelicaD.html) 
+<br/>
+**2021-2023 Lab Manager**
+<br/>
+
+**Graduate Student in Counseling Psychology, Colorado State University**
+<br/>
+[CV](files/CVs/DeFalco_CV.pdf) [Google Scholar](https://scholar.google.com/citations?user=lXu-bq4AAAAJ&hl=en&oi=ao) [Twitter](https://twitter.com/A_DeFalco11)
+
+
+<br/>
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with short black hair, and a Strawberry Shortcake white shirt on.",echo=FALSE}
+knitr::include_graphics("images/KarenAP.png")
+```
+[Karen Agustin-Paz](KarenAP.html)
+<br/>
+**STEM Leaders Assistant Researcher, 2022-2023**
+:::
+
+<br/>
+
+:::
+
+<br/>
+
+:::float-image
+
+```{r, out.width='150px', out.extra='style="float:above; padding:1px"', fig.alt = "Picture of a smiling person with a black hat on, fair skin, and a grey rain jacket against a mountaneous background.", echo=FALSE}
+knitr::include_graphics("images/JacksonC.png")
+```
+
+[Jackson Cutler](JacksonC.html)
+<br/>
+**Undergraduate Assistant Researcher, 2021-2022**
 :::
