--- a/index.Rmd
+++ b/index.Rmd
@@ -12,11 +12,11 @@ site: distill::distill_website
 knitr::include_graphics("images/Dr_BennitoNoBG.png")
 ```
 
-We are a new psychophysiological research lab in the [School of Psychological Science](https://catalog.oregonstate.edu/college-departments/liberal-arts/school-psychological-sciences/) at [Oregon State University](https://oregonstate.edu/). We take a multi-method experimental approach to studying the affective and emotional responses to stressors and how commonly used drugs change those responses. We study the mechanisms of these responses by assessing their neurobiological, cognitive, and behavioral components. We want to learn how responses to stressors play a role in mental health challenges such as addiction and anxiety so, eventually, we can better treat such challenges. Because we want to get to the truth in our research, we approach our work with an eye to rigor, equity, and replicability consistent with the “reproducibility revolution” and open science movement. 
+We are a psychophysiological research lab in the [School of Psychological Science](https://catalog.oregonstate.edu/college-departments/liberal-arts/school-psychological-sciences/) at [Oregon State University](https://oregonstate.edu/). We take a multi-method experimental approach to studying the affective and emotional responses to stressors and how commonly used drugs change those responses. We study the mechanisms of these responses by assessing their neurobiological, cognitive, and behavioral components. We want to learn how responses to stressors play a role in mental health challenges such as addiction and anxiety so, eventually, we can better treat such challenges. Because we want to get to the truth in our research, we approach our work with an eye to rigor, equity, and replicability consistent with the “reproducibility revolution” and open science movement. 
 :::
 
 <div class="note">
-<strong> NOTE:</strong> The deadline for the 2023 application cycle for the Health Psychology PhD program has passed. Please check back next year for changes. </div> 
+<strong> NOTE:</strong> Dr. Bradford **WILL** be reviewing applications for the 2023-2024 graduate student application cycle for the Health Psychology PhD program. If you would like to learn more about the Health Psychology PhD program at OSU, click [here](https://liberalarts.oregonstate.edu/sps/psychology/graduate-psychology/about-our-program/health-psychology-area). Feel free to contact Dr. Bradford at daniel.bradford@oregonstate.edu with any questions. </div> 
 
 <!--- Dr. Bradford will be reviewing applications for the 2023 graduate student application cycle for the Health Psychology PhD program. If you would like to learn more about the Health Psychology PhD program at OSU, click [here](https://liberalarts.oregonstate.edu/sps/psychology/graduate-psychology/about-our-program/health-psychology-area). Feel free to contact Dr. Bradford at daniel.bradford@oregonstate.edu with any questions.--> 
 <!--![](images/Dr_BennitoNoBG.png)-->
