--- a/AngelicaD.Rmd
+++ b/AngelicaD.Rmd
@@ -18,9 +18,9 @@ output:
 
 I graduated from the University of Miami with a Bachelor of Science in Psychology and departmental honors. I've had a few research experiences during my time as an undergraduate, both in the clinical and empirical realms. After working with Dr. Bradford, my interest in psychophysiology has become prominent. I am passionate about learning about and treating addiction, trauma and psychopathological disorders (e.g., anxiety). 
 
-In the future, I plan to pursue a Ph.D. in Clinical Psychology, and eventually working to re-frame the thinking and structure of clinical treatment as a whole.
-
 I am also passionate about mental health advocacy, awareness and destigmatization of mental health issues. As an undergraduate, I was a peer educator with an organization called COPE (Counseling Outreach Peer Education). We worked to bridge the gap between the University of Miami Counseling Center and student body  by creating and implementing various outreach materials and presentations in an effort to raise awareness and access to information surrounding such topics. I gained a strong sense of community from my experience in COPE, as well as prioritizing empathy and acceptance above all else.
+
+As of August 2023, I will be a Counseling Psychology PhD student at Colorado State University. I will be working with [Dr. Noah Emery at the ARC Lab](https://psychlabs.colostate.edu/emery/) investigating the protective factors of positive emotion in substance use.
 
 ## Education
 
